blog, about, index  and more changes

--- a/app/contact.html
+++ b/app/contact.html
@@ -468,7 +468,7 @@ gtag('config', 'UA-159861942-1');
             </div>
 
             <div class="contact__right-container">
-                <div class="contact__animation" style="padding-top: 35px;">
+                <div class="contact__animation">
 
                     <h3 class="contact__title-text">
                         Our Office Address
