--- a/app/index.html
+++ b/app/index.html
@@ -805,7 +805,7 @@
                             </a>
                         </div>
                         <div class="portfolio__item portfolio__item--right ">
-                            <img src="assets/images/afiaanyi.png " style="width: 84%; " alt=" " class="portfolio__mark-up ">
+                            <img src="assets/images/afiaanyi-pro.png " style="width: 84%; " alt=" " class="portfolio__mark-up ">
                         </div>
                     </div>
 
@@ -848,7 +848,7 @@
                             </a>
                         </div>
                         <div class="portfolio__item portfolio__item--right ">
-                            <img src="assets/images/momfoundation.png " style="width: 83%; " alt=" " class="portfolio__mark-up ">
+                            <img src="assets/images/mom-pro.png " style="width: 83%; " alt=" " class="portfolio__mark-up ">
                         </div>
                     </div>
 
@@ -871,9 +871,37 @@
 
         <div class="swiper-container">
             <div class="swiper-wrapper">
+                
+                <div class="testimonials swiper-slide">
+                    <div class="testimonials__container-two ">
+                        <img src="assets/images/pic-square.png " class="testimonials__pic " alt=" ">
+                    </div>
+                    <div class="testimonials__container-second ">
+                        <h2 class="title testimonials__title title__format">
+                            Our Clients Loves Us
+                        </h2>
+
+                        <div class="testimonials__content ">
+                            <img src="assets/images/pic-square.png " class="testimonials__img--resp " alt=" ">
+                            <div class="testimonials__body ">
+                                <img src="assets/images/quote.png " alt=" " class="quote ">
+                                <p class="testimonials__body-text ">
+                                    &OpenCurlyDoubleQuote;We've had an amazing experience working with KJK Africa in the design, development and delivery of our leading digital communication channel. The team exemplify thoroughness and detailed attention
+                                     to our quest to provide a user friendly communication channel for every visitor.&nbsp;&CloseCurlyDoubleQuote;
+                                </p>
+                                <p class="testimonials__body-text testimonials__body-text--small testimonials__body-text--adjusted ">
+                                    Telema Davies
+                                    <!-- <span class="content--thin--strong testimonials__body-text--strong">Senior Pastor</span> -->
+                                    <br>
+                                    <span class="content--thin--strong content--thin--strong--colored testimonials__body-text--strong">Partners TwoReport</span>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="testimonials swiper-slide">
                     <div class="testimonials__container-one">
-                        <img src="assets/images/giwa.jpg " class="testimonials__pic " alt=" ">
+                        <img src="assets/images/giwa2.jpg " class="testimonials__pic " alt=" ">
                     </div>
                     <div class="testimonials__container-second ">
                         <h2 class="title testimonials__title title__format">
@@ -900,33 +928,6 @@
                                         <br>
                                         tru-DATA and TrippleGee & Co. Plc.    
                                     </span>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="testimonials swiper-slide">
-                    <div class="testimonials__container-two ">
-                        <img src="assets/images/pic-square.png " class="testimonials__pic " alt=" ">
-                    </div>
-                    <div class="testimonials__container-second ">
-                        <h2 class="title testimonials__title title__format">
-                            Our Clients Loves Us
-                        </h2>
-
-                        <div class="testimonials__content ">
-                            <img src="assets/images/pic-square.png " class="testimonials__img--resp " alt=" ">
-                            <div class="testimonials__body ">
-                                <img src="assets/images/quote.png " alt=" " class="quote ">
-                                <p class="testimonials__body-text ">
-                                    &OpenCurlyDoubleQuote;We've had an amazing experience working with KJK Africa in the design, development and delivery of our leading digital communication channel. The team exemplify thoroughness and detailed attention
-                                     to our quest to provide a user friendly communication channel for every visitor.&nbsp;&CloseCurlyDoubleQuote;
-                                </p>
-                                <p class="testimonials__body-text testimonials__body-text--small testimonials__body-text--adjusted ">
-                                    Telema Davies
-                                    <!-- <span class="content--thin--strong testimonials__body-text--strong">Senior Pastor</span> -->
-                                    <br>
-                                    <span class="content--thin--strong content--thin--strong--colored testimonials__body-text--strong">Partners TwoReport</span>
                                 </p>
                             </div>
                         </div>
