--- a/app/portfolio.html
+++ b/app/portfolio.html
@@ -492,9 +492,9 @@
                 <div class="portfolio-section__container row">
 
                     <div class="portfolio-section__left-container">
-                        <h2 class="title portfolio-section__title">
+                        <!-- <h2 class="title portfolio-section__title">
                             Portfolio
-                        </h2>
+                        </h2> -->
 
                         <!-- <p class="portfolio-section__text">
                             KJK AFRICA provides engaging and exciting software solutions for modern retail. Our team
@@ -802,9 +802,9 @@
                 <div class="portfolio-section__container row">
 
                     <div class="portfolio-section__left-container">
-                        <h2 class="title portfolio-section__title">
+                        <!-- <h2 class="title portfolio-section__title">
                             Portfolio
-                        </h2>
+                        </h2> -->
 
                         <!-- <p class="portfolio-section__text">
                             KJK AFRICA provides engaging and exciting software solutions for modern retail. Our team
