--- a/app/team.html
+++ b/app/team.html
@@ -589,7 +589,16 @@
                         <div class="team__modal modal 1">
                             <div class="team__content modal__content">
                                 <div class="team__desc">
+                                    <div>
+                                    <div style="position: absolute; right: 0;">
+                                        <img src="assets/images/modalmap.png" alt="">
+                                    </div>
                                     <h3 class="team__hero">Onyeka Akumah's Profile</h3>
+                                        <div class="team__links">
+                                            <a href="" target="_blank"><img src="assets/images/linkedin-gradient.png" alt=""></a>
+                                            <a href="" target="_blank"><img class="twitter" src="assets/images/twitter-gradient.png" alt=""></a>
+                                        </div>
+                                    </div>
                                     <p>
                                         Onyeka Akumah is the Founder and Chief Executive Officer (CEO) of
                                          Farmcrowdy – a startup he launched in November 2016 and is currently 
@@ -620,7 +629,17 @@
                         <div class="team__modal modal 2">
                         <div class="team__content modal__content">
                             <div class="team__desc">
-                                <h3 class="team__hero">Charles Ojei Profile</h3>
+                                
+                                <div>
+                                    <div style="position: absolute; right: 0;">
+                                        <img src="assets/images/modalmap.png" alt="">
+                                    </div>
+                                    <h3 class="team__hero">Charles Ojei Profile</h3>
+                                        <div class="team__links">
+                                            <a href="" target="_blank"><img src="assets/images/linkedin-gradient.png" alt=""></a>
+                                            <a href="" target="_blank"><img class="twitter" src="assets/images/twitter-gradient.png" alt=""></a>
+                                        </div>
+                                </div>
                                 <p>
                                     Charles Ojei is a business development expert focused on creating innovative
                                      business models to help drive economic and social impact in emerging markets. 
@@ -648,7 +667,16 @@
                         <div class="team__modal modal 3">
                             <div class="team__content modal__content">
                                 <div class="team__desc">
+                                    <div>
+                                        <div style="position: absolute; right: 0;">
+                                            <img src="assets/images/modalmap.png" alt="">
+                                        </div>
                                     <h3 class="team__hero">Adebola Kupoluyi's Profile</h3>
+                                            <div class="team__links">
+                                                <a href="" target="_blank"><img src="assets/images/linkedin-gradient.png" alt=""></a>
+                                                <a href="" target="_blank"><img class="twitter" src="assets/images/twitter-gradient.png" alt=""></a>
+                                            </div>
+                                    </div>
                                     <p>
                                         Adebola is a seasoned professional with over nine (9) years of valuable experience 
                                         garnered in diverse, challenging roles. She possesses broad management experience 
@@ -680,7 +708,16 @@
                         <div class="team__modal modal 4">
                             <div class="team__content modal__content">
                                 <div class="team__desc">
+                                    <div>
+                                        <div style="position: absolute; right: 0;">
+                                            <img src="assets/images/modalmap.png" alt="">
+                                        </div>
                                     <h3 class="team__hero">Olayemi Keri Profile</h3>
+                                            <div class="team__links">
+                                                <a href="" target="_blank"><img src="assets/images/linkedin-gradient.png" alt=""></a>
+                                                <a href="" target="_blank"><img class="twitter" src="assets/images/twitter-gradient.png" alt=""></a>
+                                            </div>
+                                    </div>
                                     <p>
                                         Yemi Keri is one of the foremost women in Technology in Nigeria. 
                                         She is the Chief Executive Officer of Heckerbella Limited, 
@@ -712,7 +749,16 @@
                         <div class="team__modal modal 5">
                             <div class="team__content modal__content">
                                 <div class="team__desc">
+                                    <div>
+                                        <div style="position: absolute; right: 0;">
+                                            <img src="assets/images/modalmap.png" alt="">
+                                        </div>
                                     <h3 class="team__hero">Onayinka Olusegun Profile</h3>
+                                            <div class="team__links">
+                                                <a href="" target="_blank"><img src="assets/images/linkedin-gradient.png" alt=""></a>
+                                                <a href="" target="_blank"><img class="twitter" src="assets/images/twitter-gradient.png" alt=""></a>
+                                            </div>
+                                    </div>
                                     <p>
                                         Mr. Olusegun Onayinka, sits on the Board of Several Companies Including Perdew LLC (U.S.A), Avant Garde Energy and Bissadoss Nigeria Ltd. (An Oil trading company), where he was founding Managing Director and the brain behind steering the company to the enviable height of being one of the key importers of petroleum products for the major players in the Oil and Gas Sector, namely; NNPC, MOBIL, AGIP, TOTAL and AP, with an annual turnover of N5billion, all from being a medium scale oil marketing company. 
                                         <br><br>
@@ -727,7 +773,16 @@
                         <div class="team__modal modal 6">
                             <div class="team__content modal__content">
                                 <div class="team__desc">
+                                    <div>
+                                        <div style="position: absolute; right: 0;">
+                                            <img src="assets/images/modalmap.png" alt="">
+                                        </div>
                                     <h3 class="team__hero">Ismail Damcida Profile</h3>
+                                            <div class="team__links">
+                                                <a href="" target="_blank"><img src="assets/images/linkedin-gradient.png" alt=""></a>
+                                                <a href="" target="_blank"><img class="twitter" src="assets/images/twitter-gradient.png" alt=""></a>
+                                            </div>
+                                    </div>
                                     <p>
                                         Ismail Damcida is an international trade consultant with over a decade of
                                          experience in international trade and export business development. 
@@ -927,7 +982,16 @@
                         <div class="team__modal modal 7">
                             <div class="team__content modal__content">
                                 <div class="team__desc">
-                                    <h3 class="team__hero">Olajumoke Oduwole's Profile</h3>
+                                    <div>
+                                        <div style="position: absolute; right: 0;">
+                                            <img src="assets/images/modalmap.png" alt="">
+                                        </div>
+                                        <h3 class="team__hero">Olajumoke Oduwole's Profile</h3>
+                                            <div class="team__links">
+                                                <a href="" target="_blank"><img src="assets/images/linkedin-gradient.png" alt=""></a>
+                                                <a href="" target="_blank"><img class="twitter" src="assets/images/twitter-gradient.png" alt=""></a>
+                                            </div>
+                                    </div>
                                     <p>
                                         I am Olajumoke Oduwole, a full stack developer and the CEO of KJK Africa, where I lead a team of tech talents to build technology products and deliver services that help businesses improve output, deepen customer relationships, and grow revenue.
                                         <br><br>
@@ -950,7 +1014,16 @@
                         <div class="team__modal modal 8">
                             <div class="team__content modal__content">
                                 <div class="team__desc">
+                                    <div>
+                                        <div style="position: absolute; right: 0;">
+                                            <img src="assets/images/modalmap.png" alt="">
+                                        </div>
                                     <h3 class="team__hero">Olalekan Oladele's Profile</h3>
+                                            <div class="team__links">
+                                                <a href="" target="_blank"><img src="assets/images/linkedin-gradient.png" alt=""></a>
+                                                <a href="" target="_blank"><img class="twitter" src="assets/images/twitter-gradient.png" alt=""></a>
+                                            </div>
+                                    </div>
                                     <p>
                                         Lekan Oladele is a full-stack developer with over 7 years' experience across different industries. He has built several solutions ranging from e-commerce platforms to biometric systems, mobile banking solutions, user analytics systems, and travel management software.
                                         <br><br>
@@ -965,7 +1038,16 @@
                         <div class="team__modal modal 9">
                             <div class="team__content modal__content">
                                 <div class="team__desc">
-                                    <h3 class="team__hero">Dipo Olojede's Profile</h3>
+                                    <div>
+                                        <div style="position: absolute; right: 0;">
+                                            <img src="assets/images/modalmap.png" alt="">
+                                        </div>
+                                        <h3 class="team__hero">Dipo Olojede's Profile</h3>
+                                            <div class="team__links">
+                                                <a href="" target="_blank"><img src="assets/images/linkedin-gradient.png" alt=""></a>
+                                                <a href="" target="_blank"><img class="twitter" src="assets/images/twitter-gradient.png" alt=""></a>
+                                            </div>
+                                    </div>
                                     <p>
                                         Dipo Olojede is an ICT Expert with more than 7 years' experience working with web and PC applications. For most of his career, Dipo has been responsible for building some of the most innovative EduTech platforms in Nigeria. 
                                        <br><br>
@@ -982,7 +1064,16 @@
                         <div class="team__modal modal 10">
                             <div class="team__content modal__content">
                                 <div class="team__desc">
-                                    <h3 class="team__hero">George Edowande's Profile</h3>
+                                    <div>
+                                        <div style="position: absolute; right: 0;">
+                                            <img src="assets/images/modalmap.png" alt="">
+                                        </div>
+                                        <h3 class="team__hero">George Edowande's Profile</h3>
+                                            <div class="team__links">
+                                                <a href="" target="_blank"><img src="assets/images/linkedin-gradient.png" alt=""></a>
+                                                <a href="" target="_blank"><img class="twitter" src="assets/images/twitter-gradient.png" alt=""></a>
+                                            </div>
+                                    </div>
                                     <p>
                                         George Ikponmwosa Edomwande is a Computer Engineer, PHP Developer and results-driven
                                         IT personnel. He specialises in building advanced B2B and B2C platforms with PHP (server-side) language and has a demonstrated ability to work with firms in different industries to develop web solutions that support business growth. 
@@ -996,7 +1087,16 @@
                         <div class="team__modal modal 11">
                             <div class="team__content modal__content">
                                 <div class="team__desc">
-                                    <h3 class="team__hero">Abiola Akinwoleola's Profile</h3>
+                                    <div>
+                                        <div style="position: absolute; right: 0;">
+                                            <img src="assets/images/modalmap.png" alt="">
+                                        </div>
+                                        <h3 class="team__hero">Abiola Akinwoleola's Profile</h3>
+                                            <div class="team__links">
+                                                <a href="" target="_blank"><img src="assets/images/linkedin-gradient.png" alt=""></a>
+                                                <a href="" target="_blank"><img class="twitter" src="assets/images/twitter-gradient.png" alt=""></a>
+                                            </div>
+                                    </div>
                                     <p>
                                         Abiola is a motivated digital enthusiast with skills in social media marketing, lead generation and conversion, branding, digital community building, data management and research.
                                         <br><br>
@@ -1009,7 +1109,16 @@
                         <div class="team__modal modal 12">
                             <div class="team__content modal__content">
                                 <div class="team__desc">
-                                    <h3 class="team__hero">Kazeem Adebola's Profile</h3>
+                                    <div>
+                                        <div style="position: absolute; right: 0;">
+                                            <img src="assets/images/modalmap.png" alt="">
+                                        </div>
+                                        <h3 class="team__hero">Kazeem Adebola's Profile</h3>
+                                            <div class="team__links">
+                                                <a href="" target="_blank"><img src="assets/images/linkedin-gradient.png" alt=""></a>
+                                                <a href="" target="_blank"><img class="twitter" src="assets/images/twitter-gradient.png" alt=""></a>
+                                            </div>
+                                    </div>
                                     <p>
                                         Dipo Olojede is an ICT Expert with more than 7 years' experience working with web and PC applications. For most of his career, Dipo has been responsible for building some of the most innovative EduTech platforms in Nigeria. 
                                        <br>
