portfolio, geek-capital and more changes

--- a/app/portfolio.html
+++ b/app/portfolio.html
@@ -738,7 +738,7 @@
                                 <span>Web</span>
 
                             </div>
-                            <a href="casestudy/petrol.html"
+                            <a href="casestudy/petrolauto.html"
                                 class="btn btn--primary portfolio-section__content-btn chazb btn--hover">
                                 View Case Study
                             </a>
@@ -1222,10 +1222,10 @@
                                         <div class="portfolio-section-modal-bg">
                                             <img src="assets/images/rect-orange.png" alt="">
                                         </div>
-                                        <div class="portfolio-section-modal-img mom">
+                                        <div class="portfolio-section-modal-img narrow">
                                             <img src="assets/images/mom3.png" alt="">
                                         </div>
-                                        <div class="portfolio-section-modal-logo mom">
+                                        <div class="portfolio-section-modal-logo narrow">
                                             <img src="assets/images/mom-logo.png" alt="">
                                         </div>
                                         <p>
@@ -1289,10 +1289,10 @@
                             <div class="portfolio-section-modal-bg">
                                 <img src="assets/images/rect-orange.png" alt="">
                             </div>
-                            <div class="portfolio-section-modal-img ">
+                            <div class="portfolio-section-modal-img narrow">
                                 <img src="assets/images/apriltravels.png" alt="">
                             </div>
-                            <div class="portfolio-section-modal-logo">
+                            <div class="portfolio-section-modal-logo narrow">
                                 <img src="assets/images/april-logo.png" alt="">
                             </div>
                             <p>
@@ -1484,7 +1484,7 @@
                         </div>
 
                     </div>
-                    <div class="swiper-slide portfolio__web--item">
+                    <!-- <div class="swiper-slide portfolio__web--item">
                         <div class="portfolio__container web">
                             <div class="portfolio__item portfolio__item--flex-img ">
                                 <img src="assets/images/mom-web.png" style="width: 100%; " alt=" ">
@@ -1508,7 +1508,7 @@
 
                         </div>
 
-                    </div>
+                    </div>  -->
                     <div class="swiper-slide portfolio__web--item">
                         <div class="portfolio__container web">
                             <div class="portfolio__item portfolio__item--flex-img ">
@@ -1735,7 +1735,7 @@
                     <div class="swiper-slide portfolio__web--item">
                         <div class="portfolio__container web queens">
                             <div class="portfolio__item portfolio__item--flex-img ">
-                                <img class="queens" src="assets/images/queen.png" alt=" ">
+                                <img class="queens" src="assets/images/queen-pro.png" alt=" ">
                             </div>
                             <div class="portfolio__item portfolio__item--flex-text">
 
@@ -1761,7 +1761,7 @@
                     <div class="swiper-slide portfolio__web--item">
                         <div class="portfolio__container web">
                             <div class="portfolio__item portfolio__item--flex-img ">
-                                <img src="assets/images/miss2mrs.png " style="width: 100%; " alt=" ">
+                                <img src="assets/images/j36-pro.png " style="width: 100%; " alt=" ">
                             </div>
                             <div class="portfolio__item portfolio__item--flex-text">
 
@@ -2563,7 +2563,7 @@
         const styledBrandText = document.querySelectorAll('.portfolio__item--flex-text p')
 
         const swiperBg = document.querySelectorAll('.portfolio__swiper--area')
-        const bgColors = ['#E83124', '#D43724', '#32B196', '#D43724', '#970A73', '#4DC28D', '#9B4E6C', '#333EA8', '#D8944E', '#8F45A5', '#3E7BAC', '#41ABD5', '#222D35', '#2B8309', '#8F45A5']
+        const bgColors = ['#E83124', '#D43724', '#32B196', '#D43724', '#4DC28D', '#9B4E6C', '#333EA8', '#D8944E', '#8F45A5', '#3E7BAC', '#41ABD5', '#222D35', '#2B8309', '#8F45A5']
         const brandColors = ['#970A73', '#00175C', '#1A7BA8', '#1A7BA8', '#2B8309', '#911F0D', '#46AE14', '#131440', '#46AE14', '#30C8FA', '#F44236', '#4363DF', '#FB0201', '#6F2828', '#30C8FA', '#30C8FA', '#1A7BA8', '#30C8FA', '#30C8FA', '#30C8FA', '#30C8FA', '#30C8FA']
 
         const newColors = bgColors.concat(brandColors)
